<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="218dp"
        android:layout_height="40dp"
        android:src="@drawable/logo_inacap_400x109"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_app_128x128"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>


    <TextView
        android:id="@+id/txv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:layout_gravity="center"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_nombre"

        />

    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_edad"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:drawableRight="@drawable/calcular_24x24"/
    >
    <TextView
        android:id="@+id/txv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_resultado"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        />

</LinearLayout>